# django-visual-urls

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
src/django_visual_urls/: apps.py  tests.py  tests_urls.py
src/django_visual_urls/management/commands/: visualize.py
