[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-visual-urls"
version = "0.0.1"
description = "Une librairie pour visualiser les URLs Django avec un graphe interactif."
requires-python = ">=3.6"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=3.2",
]

[project.urls]
"Homepage" = "https://github.com/gabigab117/django-visual-urls"